2007-01-05  Bruno JOFRET  <bruno.jofret@inria.fr>

	* src/elementaryFunctions/acos :
	ArcCosine functions
	* src/elementaryFunctions/asin :
	ArcSine functions

2006-12-11  Bruno JOFRET  <bruno.jofret@inria.fr>

	* src/test/testCos.c :
	Add some cosine tests.
	* src/test/tesSin.c :
	Add some sine tests.
	* README :
	Add some standards and style definitions.

2006-12-08  Bruno JOFRET  <bruno.jofret@inria.fr>

	* src/test :
	Test files for libraries.
	* src/elementaryFunctions/cos :
	Cosine functions
	* src/elementaryFunctions/sin :
	Sine functions


2006-12-04  Bruno JOFRET  <bruno.jofret@inria.fr>

	* Group functions:
	Group all same name functions, ignore type.
	* Inverse Cosinus [acos]:
	Done for Real and Complex type.
	* Inverse Hyperbolic Cosinus [acosh]:
	Done for Real and Complex type.
	* Inverse Sinus [asin]:
	Done for Real and Complex type.
	* Inverse Hyperbolic Sinus [asinh]:
	Done for Real and Complex type.
	* Inverse Tangeant [atan]:
	Done for Real and Complex type.

2006-11-30  Bruno JOFRET  <bruno.jofret@inria.fr>

	* Hyperbolic Cosinus [cosh]:
	Done for Real and Complex type.
	* Hyperboloc Sinus [sinh]:
	Done for Real and Complex type.
	* Hyperbolic Tangeant [tanh]:
	Done for Real and Complex type.
	* src:
	To put basic sources.
	* src/type:
	To put complex types.
	* src/type/doubleComplex.{ch}:
	Simple definition of complex as struct of double.

2006-11-29  Bruno JOFRET  <brunojofret@inria.fr>

	* Pythagore [pythag]:
	Done for Real Type.
	* LAPACK [dlamch]:
	Add dlamch.help to keep an eye on each option.
	* Icrease logarithm [log1p]:
	Done for Real Type.
	* Exponential [exp]:
	Done for Real and Complex Type.
	* ArcTangeante2 [atan2]:
	Done for Real Type.

2006-11-28  Bruno JOFRET  <bruno.jofret@inria.fr>

	* Logarithm [log]:
	Correction : Log for a negative Real call Log as complex.
	* Root [sqrt]:
	Done for Real and Complex.

2006-11-27  Bruno JOFRET  <bruno.jofret@inria.fr>

	* Number Sign [sign]:
	Done for Real Type.
	* Abslute Value [abs]: