@@ -1,0 +1,27 @@
+/*
+**  -*- C -*-
+**
+** zcosha.c
+** Made by  Bruno JOFRET <bruno.jofret@inria.fr>
+**
+** Started on  Thu Dec  7 16:12:02 2006 jofret
+** Last update Fri Jan 19 14:53:42 2007 jofret
+**
+** Copyright INRIA 2006
+*/
+
+#ifndef STDC99
+#include "doubleComplex.h"
+#else
+#include <complex.h>
+typedef double complex doubleComplex;
+#endif
+
+doubleComplex zcoshs(doubleComplex);
+
+void zcosha(doubleComplex* x, int strideX, doubleComplex* y, int strideY, int size) {
+  int i = 0;
+  for (i = 0; i < size; ++i) {
+    y[i] = zcoshs(x[i]);
+  }
+}
