@@ -1,0 +1,23 @@
+/*
+**  -*- C -*-
+**
+** csinhs.c
+** Made by  Bruno JOFRET <bruno.jofret@inria.fr>
+**
+** Started on  Fri Dec  8 12:04:39 2006 jofret
+** Last update Fri Jan 19 15:20:48 2007 jofret
+**
+** Copyright INRIA 2006
+*/
+
+#ifndef STDC99
+#include "floatComplex.h"
+#else
+#include <complex.h>
+typedef float complex floatComplex;
+#endif
+
+floatComplex csinhs(floatComplex z) {
+  /* FIXME: Dummy... */
+  return z;
+}
