@@ -1,0 +1,17 @@
+/*
+**  -*- C -*-
+**
+** ssinhs.c
+** Made by  Bruno JOFRET <bruno.jofret@inria.fr>
+**
+** Started on  Fri Dec  8 10:45:34 2006 jofret
+** Last update Fri Jan 19 15:19:18 2007 jofret
+**
+** Copyright INRIA 2006
+*/
+
+#include <math.h>
+
+float ssinhs(float x) {
+  return (sinh(x));
+}
