@@ -1,0 +1,27 @@
+/*
+**  -*- C -*-
+**
+** zsinha.c
+** Made by  Bruno JOFRET <bruno.jofret@inria.fr>
+**
+** Started on  Fri Dec  8 14:02:04 2006 jofret
+** Last update Fri Jan 19 15:18:16 2007 jofret
+**
+** Copyright INRIA 2006
+*/
+
+#ifndef STDC99
+#include "doubleComplex.h"
+#else
+#include <complex.h>
+typedef double complex doubleComplex;
+#endif
+
+doubleComplex	zsinhs(doubleComplex);
+
+void zsinha(doubleComplex* x, int strideX, doubleComplex* y, int strideY, int size) {
+  int i = 0;
+  for (i = 0; i < size; ++i) {
+    y[i] = zsinhs(x[i]);
+  }
+}
